# Tensorrt-CV

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dynamic_shape_problem.py  dytest.onnx  setup.sh
Insightface/: iresnet.py  main.py
Resnet50/: main.py
Retinaface/: README.md  main.py  utils.py
Retinaface/pytorch/: config.py  net.py  retinaface.py
bert/: README.md  onnx2trt.py  onnxrun.py  utils.py
docs/: articles.md  bullshit_diary.md
dynamic_shape/: README.md  custom_inputs.json  dynamic_shape_problem.py  dytest.onnx  multiprofile_solution.py
official_samples/: Makefile  Makefile.config
official_samples/common/: BatchStream.h  argsParser.h  buffers.h  common.h  sampleDevice.h  sampleEngines.cpp  sampleInference.cpp  sampleOptions.cpp  sampleOptions.h  sampleReporting.cpp  sampleUtils.h
official_samples/python/end_to_end_tensorflow_mnist/: README.md  model.py  requirements.txt  sample.py
official_samples/python/engine_refit_mnist/: README.md  model.py  requirements.txt  sample.py
official_samples/python/int8_caffe_mnist/: README.md  calibrator.py  sample.py
official_samples/python/introductory_parser_samples/: README.md  caffe_resnet50.py  onnx_resnet50.py  requirements.txt  uff_resnet50.py
official_samples/sampleAlgorithmSelector/: Makefile  sampleAlgorithmSelector.cpp
official_samples/sampleCharRNN/: Makefile
official_samples/sampleDynamicReshape/: Makefile
official_samples/sampleFasterRCNN/: Makefile
official_samples/sampleGoogleNet/: Makefile
official_samples/sampleINT8/: Makefile
official_samples/sampleINT8API/: Makefile
official_samples/sampleMLP/: Makefile
official_samples/sampleMNIST/: Makefile
official_samples/sampleMNISTAPI/: Makefile
official_samples/sampleMovieLens/: Makefile
official_samples/sampleMovieLensMPS/: Makefile
official_samples/sampleNMT/: Makefile
official_samples/sampleOnnxMNIST/: Makefile
official_samples/samplePlugin/: Makefile
official_samples/sampleReformatFreeIO/: Makefile
official_samples/sampleSSD/: Makefile
official_samples/sampleUffFasterRCNN/: Makefile
official_samples/sampleUffMNIST/: Makefile
official_samples/sampleUffMaskRCNN/: Makefile  sampleUffMaskRCNN.cpp
official_samples/sampleUffPluginV2Ext/: Makefile
official_samples/sampleUffSSD/: Makefile
official_samples/trtexec/: Makefile  trtexec.cpp
plugin/: CMakeLists.txt  exports.map
plugin/LayerNormPlugin/: LayerNormPlugin.cu  LayerNormPlugin.h  Makefile  testLayerNormPlugin.py
plugin/batchedNMSPlugin/: CMakeLists.txt  batchedNMSPlugin.cpp
plugin/layerNormPlugin/: CMakeLists.txt  LayerNormKernel.cu  LayerNormKernel.h  LayerNormPlugin.cu  LayerNormPlugin.h  Makefile  nsys_profile.sh  testLayerNormPlugin.py
python_lib/: resnet.py  tensorrt_base.py  tensorrt_base_v2.py  tensorrt_base_v3.py
samples/Retinaface/: main.py
samples/bert/: README.md  model.py  torch2onnx.py
samples/dynamic_shape/: dynamic_shape_problem.py  multiprofile_solution.py  poly_run.sh
samples/python_lib/: retinaface.py  tensorrt_base_v1.py  tensorrt_base_v4.py
samples/workbanch/: compare.sh  display_registed_plugins.py  trt_build.sh  trt_profile.sh
test/: testLayerNormPlugin.py
(+34 files in other folders)
